--- a/client/src/styles/biodatas.css
+++ b/client/src/styles/biodatas.css
@@ -1,36 +1,23 @@
 
+    .biodatas_page {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+    }
 
-@media screen and (min-width: 1024px) {
     .biodatas {
         width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0;
+        overflow-x: hidden; 
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-        justify-items: center;
+       
         
     
     
     }
-    }
-    @media screen and (min-width: 768px) and (max-width: 1023px){
-        .biodatas {
-            width: 100%;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-            justify-items: center;
-            
-        
-        
-        }
-    }
-    @media screen and (max-width: 767px) {
-        .biodatas {
-            width: 100%;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-            justify-items: center;
-          
-            
-        
-        
-        }
-    }
+   
