--- a/client/src/styles/biodata.css
+++ b/client/src/styles/biodata.css
@@ -29,7 +29,7 @@
     {
       color: #fff;
       font-family:   'AdorshoLipi' ;
-      
+      font-size: xx-small;
       text-align: center;
       padding-top: 4px;
       
