--- a/client/src/styles/biodata.css
+++ b/client/src/styles/biodata.css
@@ -1,7 +1,7 @@
 .loading{
   margin: 0px;
   padding: 0px;
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   align-items: center;
   justify-content: center;
