--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -2,6 +2,6 @@
     width: 100%;
     outline: none; 
     color: #FFFFFF;
-    background-color: #263238;
+    background-color: hsl(320, 94%, 21%);
     border: none;
 }
