--- a/client/src/styles/createBiodata.css
+++ b/client/src/styles/createBiodata.css
@@ -177,3 +177,37 @@ button {
 .active-content {
   display: block;
 }
+.formSelect {
+  width: 100%;
+  min-height: 3.5rem;
+  border-radius: 3px;
+  margin: 1.3rem;
+  text-indent: 10px;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+}
+.formSelect:active, .formSelect:hover, .formSelect:focus {
+  border: 1px solid blueviolet;
+  outline:none;
+}
+.select-wrapper {
+  position: relative;
+}
+
+.select-wrapper::after {
+  content: "▼";
+  font-size: 0.7rem;
+  top: 42px;
+  right: 35px;
+  position: absolute;
+}
+.textArea {
+  width: 100%;
+  min-height: 3.5rem;
+  border-radius: 3px;
+  margin: 1.3rem;
+}
+.textArea:active, .textArea:hover, .textArea:focus {
+  border: 1px solid blueviolet;
+  outline:none;
+}
