--- a/client/src/styles/biodata.css
+++ b/client/src/styles/biodata.css
@@ -151,7 +151,8 @@
       font-family:'AdorshoLipi' ;
       font-size: small;
       padding-top: 5px;
-      
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
      
       
     }
@@ -162,6 +163,8 @@
       font-family:'AdorshoLipi' ;
       font-size: small;
       padding-top: 5px;
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
     }
 .ifContact
     {
