--- a/client/src/styles/createBiodata.css
+++ b/client/src/styles/createBiodata.css
@@ -69,7 +69,7 @@
 }
 .custom-form{
   border: 0.1px solid rgb(149, 210, 238);
-  
+  word-wrap:break-word;
   display: flex;
   flex-direction: column;
  
@@ -125,11 +125,12 @@ option {
 }
 
 .custom-form h6 {
-  position:absolute;
+ 
   margin-top: -10px;
   margin-left: 10px;
-  margin-right: 2px;
+  margin-right: auto;
   background-color: white;
+  word-wrap:break-word;
 }
 
 .upload-btn {
