--- a/client/src/styles/createBiodata.css
+++ b/client/src/styles/createBiodata.css
@@ -68,6 +68,7 @@
   margin-right: 30px;
 }
 .custom-form{
+  position: relative;
   border: 0.1px solid rgb(149, 210, 238);
   word-wrap:break-word;
   display: flex;
