--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -15,10 +15,19 @@ header{
     width: 100%;
     height: 100%;
 }
-
+.headerMenuContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between !important;
+}
 .logo {
-    color:white;
-    font-family: 'Great Vibes', cursive !important;
+    color: #fff;
+    display: inline;
+    
+    text-transform: uppercase;
+    font-family: 'Yrsa', serif;
+    font-size: 1.7rem;
+   
 }
 /* ----------- Header Menu ---------- */
 .menu{
@@ -30,6 +39,16 @@ header{
 }
 .home-icon {
     color:white;
+}
+.home-icon1 {
+    color:white;
+    font-size: 17px !important;
+    font-family: 'Yrsa', serif;
+}
+.home-icon1:hover {
+    color:rgb(223, 206, 206);
+    font-size: 17px !important;
+    font-family: 'Yrsa', serif;
 }
 .drawer-item {
     color: white;
